@@ -1,5 +1,5 @@
 // Copyright 2002-2011, University of Colorado
-package edu.colorado.phet.gravityandorbits.simsharing;
+package edu.colorado.phet.common.phetcommon.simsharing;
 
 import java.awt.image.BufferedImage;
 import java.io.ByteArrayInputStream;
