@@ -1,0 +1,2 @@
+<!-- Copyright 2002-2011, University of Colorado -->
+<body>This package contains interfaces and classes used by classes that work with simsharing</body>
